--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
       with:
         server: files.000webhost.com
         username: dimarajacasa
-        password: iCwpRiCu7(Pxzz((Ent*
+        password: ${{ secrets.FTP_PASSWORD }}
         server-dir : public_html/
